@@ -48,6 +48,7 @@
 - fix $mandir definition in Makefile.conf.in
 - fix init script stop function.
 - fix master map lexer eval order.
+- fix bad alloca usage.
  
 14/01/2008 autofs-5.0.3
 -----------------------
